added meeting link

--- a/views/tutorView.ejs
+++ b/views/tutorView.ejs
@@ -26,7 +26,7 @@
                                           <tr><p id="{{meetingItem.tutorname}}"><%= meetingItem.tutorname %></tr>
                                           <tr><p id="{{meetingItem.course}}"><%= meetingItem.course %></tr>
                                           <tr><p id="{{meetingItem.name}}"><%= meetingItem.name %></tr>
-                                          <tr><p id="{{meetingItem.desciption}}"><%= meetingItem.desciption %></tr>
+                                          <tr><a href="{{meetingItem.desciption}}">Click here to start the meeting.</a></tr>
                                           <tr><p id="{{meetingItem.time}}"><%= meetingItem.time %></tr><br><br><br>
                                           <% }) %>
                                     </table>
