--- a/views/tutorView.ejs
+++ b/views/tutorView.ejs
@@ -26,7 +26,7 @@
                                           <tr><p id="{{meetingItem.tutorname}}"><%= meetingItem.tutorname %></tr>
                                           <tr><p id="{{meetingItem.course}}"><%= meetingItem.course %></tr>
                                           <tr><p id="{{meetingItem.name}}"><%= meetingItem.name %></tr>
-                                          <tr><a href="{{meetingItem.desciption}}">Click here to start the meeting.</a></tr>
+                                          <tr><a href="https://us04web.zoom.us/j/3040067808?pwd=SVVtNnN0VEN6OU5OaElGdGw3YTJLUT09" target="_blank">Click here to start the meeting.</a></tr>
                                           <tr><p id="{{meetingItem.time}}"><%= meetingItem.time %></tr><br><br><br>
                                           <% }) %>
                                     </table>
