--- a/views/tuteeView.ejs
+++ b/views/tuteeView.ejs
@@ -29,12 +29,12 @@
                             <label for="tutors">Choose a tutor:</label><br>
                             <select name="tutors" id="tutors" size="3">
                             <% alltutors.forEach(function(tutor){ %>
-                                    <option value='<%= tutor %>'><%= tutor.username %></option>
+                                    <option value='<%= tutor.username %>' id='<%= tutor.username %>'><%= tutor.username %></option>
                             <% }) %>
                             </select><br>
-                            <input type="text" class="form-control" id="course-name" name="course-name" placeholder="Course Name" required><br>
-                            <input type="text" class="form-control" id="meeting-title" name="meeting-title" placeholder="Please enter meeting title here" required><br>
-                            <textarea id="meeting-link" name="meeting-link" rows="7" cols="70">Please find the link for the zoom meeting below: https://us04web.zoom.us/j/3040067808?pwd=SVVtNnN0VEN6OU5OaElGdGw3YTJLUT09 Meeting ID: 304 006 7808 Passcode: HqB9ws
+                            <input type="text" class="form-control" id="coursename" name="coursename" placeholder="Course Name" required><br>
+                            <input type="text" class="form-control" id="meetingtitle" name="meetingtitle" placeholder="Please enter meeting title here" required><br>
+                            <textarea id="meetinglink" name="meetinglink" rows="7" cols="70">Please find the link for the zoom meeting below: https://us04web.zoom.us/j/3040067808?pwd=SVVtNnN0VEN6OU5OaElGdGw3YTJLUT09 Meeting ID: 304 006 7808 Passcode: HqB9ws
                             </textarea><br>
                             <label for="appt">Choose a time for your meeting:</label><br>
                             
